# updatable-cli

./: .gitignore  Cargo.toml  README.md
.beads/: .gitignore
src/: lib.rs  mcp.rs
